modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -1192,6 +1192,9 @@ header.header-main {
       width: auto;
       height: 44px;
     }
+	  li {
+		  text-align: center !important;
+	  }
   }
   .open-edx-logo{
     ul{
