modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -1392,7 +1392,7 @@ header.header-main {
     .open-edx-logo{
       ul{
         li{
-          text-align: right;
+          text-align: center;
           img{
             max-width: 80%;
           }
