--- a/ck-theme/lms/templates/footer.html
+++ b/ck-theme/lms/templates/footer.html
@@ -43,7 +43,8 @@
             <li>T: +44 (0)1455 200 520<br>
 				E: <a href="mailto:sales@combined-knowledge.com">sales@combined-knowledge.com</a></li>
           </ul>
-              <table style="width: 200px; margin: 0 auto;">
+              <div style="text-align: left">
+				  <table align="left" style="width: 200px; margin: 0 auto;">
                 <tbody>
                   <tr>
                     <td style="width: 25%;"><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168"><img class="alignnone wp-image-26625 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/011.png" alt="" width="25" height="25" /></a></td>
@@ -53,6 +54,7 @@
                   </tr>
                 </tbody>
               </table>
+			</div>
             
         </div>
 		</div>
