modified:   ck-theme/lms/templates/footer.html

--- a/ck-theme/lms/templates/footer.html
+++ b/ck-theme/lms/templates/footer.html
@@ -43,7 +43,7 @@
             <li>T: +44 (0)1455 200 520<br>
 				E: <a href="mailto:sales@combined-knowledge.com">sales@combined-knowledge.com</a></li>
           </ul>
-              <div style="text-align: left">
+              <div style="text-align: left; margin-left: 24px;">
 				  <table align="left" style="width: 200px; margin: 0 auto;">
                 <tbody>
                   <tr>
