modified:   ck-theme/lms/templates/courses_list.html 	modified:   ck-theme/lms/templates/courseware/courses.html 	modified:   ck-theme/lms/templates/header.html 	modified:   ck-theme/lms/templates/index.html

--- a/ck-theme/lms/templates/courses_list.html
+++ b/ck-theme/lms/templates/courses_list.html
@@ -14,7 +14,7 @@
             <div class="row">
               <div class="col col-12 text-center">
                 <h2>
-                  <span class="course-list-heading"> Click on any course to learn more</span></h2>
+                  <span class="course-list-heading"> Click on a course to learn more</span></h2>
               </div>
             </div>
 
