--- a/ck-theme/lms/templates/courseware/courses.html
+++ b/ck-theme/lms/templates/courseware/courses.html
@@ -26,7 +26,7 @@
             <div class="row">
               <div class="col col-12 text-center">
                 <h2>
-                  <span> ${_('Lorem ipsum dolor sit amet.')}</span>
+                  <span> ${_('Click on a course to learn more')}</span>
                 </h2>
               </div>
             </div>
