modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -405,6 +405,9 @@ header.header-main {
     background-color: $white;
 	  color: #ffffff;
     z-index: 10;
+	  .pull-right {
+		  width: 60% !important;
+	  }  
     // box-shadow: 0px 2px 3px $light;
     padding: 1rem 0;
     li{
