--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -28,7 +28,7 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
             <div class="collapsed-button">
               <span></span><span></span><span></span>
             </div>
-            <ul class="list-inline pull-right">
+            <ul class="list-inline">
               % if user.is_authenticated():
                 <%
                   username = user.username
