--- a/ck-theme/lms/templates/courseware/courses.html
+++ b/ck-theme/lms/templates/courseware/courses.html
@@ -10,7 +10,7 @@
       <div class="grid-container grid-manual">
         <div class="row">
           <div class="col col-10 sm-col-10 md-col-10 lg-col-8 xl-col-6 text-tint">
-            <p>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur.</p>
+            <p>Click on a course to learn more</p>
           </div>
         </div>
       </div>
@@ -26,7 +26,7 @@
             <div class="row">
               <div class="col col-12 text-center">
                 <h2>
-                  <span> ${_('Click on a course to learn more')}</span>
+                 <!-- <span> ${_('Click on a course to learn more')}</span>-->
                 </h2>
               </div>
             </div>
