--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -331,7 +331,7 @@ header.header-main {
         display: block;
         width: 25px;
         height:4px;
-        background-color: $x-dark;
+        background-color: $white;
         margin-bottom: 3px;
       }
 
@@ -340,6 +340,7 @@ header.header-main {
     }
     ul{
       display: none;
+		background-color: $dark;
       &.show-menu{
         display: block;
       }
@@ -562,6 +563,7 @@ header.header-main {
   &.hero-catalog{
     background: url("../images/header_bg.jpg") no-repeat top center !important;
     background-size: cover !important;
+	  text-align: center;
   }
   &.hero-video{
     background: none;
@@ -661,9 +663,9 @@ header.header-main {
           padding: 1.5rem 0;
           .courses-listing-item{
             padding: 0 5%;
-			-webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
-			-moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
-			box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+			-webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
+			-moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
+			box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
             .cover-image{
               height: 200px;
               &:before{
