--- a/ck-theme/lms/templates/courseware/courses.html
+++ b/ck-theme/lms/templates/courseware/courses.html
@@ -10,7 +10,7 @@
       <div class="grid-container grid-manual">
         <div class="row">
          
-            <p>Click on a course to learn more</p>
+            <h1>Click on a course to learn more</h1>
           
         </div>
       </div>
