--- a/ck-theme/lms/templates/course.html
+++ b/ck-theme/lms/templates/course.html
@@ -10,7 +10,7 @@ from django.core.urlresolvers import reverse
     <header class="course-image">
       <div class="cover-image">
         <img src="${course.course_image_url}" alt="${course.display_name_with_default} ${course.display_number_with_default}" />
-        <div class="learn-more" aria-hidden=true>${_("LEARN MORE")}</div>
+        <div class="learn-more" aria-hidden="true">${_("LEARN MORE")}</div>
       </div>
     </header>
     <div class="course-info" aria-hidden="true">
