--- a/ck-theme/lms/templates/about_site.html
+++ b/ck-theme/lms/templates/about_site.html
@@ -13,28 +13,28 @@
     <div class="row about-list text-center">
       <div class="col col-4 about-list-item">
         <div class="about-icon">
-          <img src="${static.url('images/about-img.png')}" alt="Students" />
+          <img src="${static.url('images/now-icon.png')}" alt="Learn now" />
           <p>
-            <span>Participants</span>
-            Lorem ipsum dolor sit amet, ad mea dictas audiam, nec id graecis explicari.
+            <span>Learn now</span>
+            Engaging videos and hands-on labs to equip you with  with the skills and knowledge to be ultra productive.
           </p>
         </div>
       </div>
       <div class="col col-4 about-list-item">
         <div class="about-icon">
-          <img src="${static.url('images/about-img.png')}" alt="Faculty" />
+          <img src="${static.url('images/pace-icon.png')}" alt="Learn at your own pace" />
           <p>
-            <span>Faculty</span>
-            Lorem ipsum dolor sit amet, ad mea dictas audiam, nec id graecis explicari.
+            <span>Learn at your own pace</span>
+            All courses are self-paced allowing you to pause and resume as your schedule permits.
           </p>
         </div>
       </div>
       <div class="col col-4 about-list-item">
         <div class="about-icon">
-          <img src="${static.url('images/about-img.png')}" alt="Courses" />
+          <img src="${static.url('images/anywhere-icon.png')}" alt="Learn anywhere" />
           <p>
-            <span>Courses</span>
-            Lorem ipsum dolor sit amet, ad mea dictas audiam, nec id graecis explicari.
+            <span>Learn anywhere</span>
+            All you need is an internet connection, learn from any computer or mobile device.
           </p>
         </div>
       </div>
@@ -42,7 +42,7 @@
 
     <div class="row hidden more-about-btn">
       <div class="col col-12 text-center">
-        <a href="/about" class="btn-neutral">More about this site</a>
+        <a href="https://www.combined-knowledge.com/index.php/home/about-us/" class="btn-neutral">More about Combined Knowledge</a>
       </div>
     </div>
   </div>
