--- a/ck-theme/lms/templates/index.html
+++ b/ck-theme/lms/templates/index.html
@@ -30,7 +30,8 @@ from django.core.urlresolvers import reverse
       <div class="grid-container grid-manual">
         <div class="row" style="text-align: center">
             <h1>YOUR GLOBAL ELEARNING PORTAL<br>
-            ______</h1>
+              from Combined Knowledge
+            </h1>
             % if show_homepage_promo_video:
               <a href="#video-modal" class="btn-neutral btn-large" rel="leanModal">Watch video <i class="fa fa-play"></i></a>
             % endif
