--- a/ck-theme/lms/templates/about_site.html
+++ b/ck-theme/lms/templates/about_site.html
@@ -6,7 +6,7 @@
   <div class="grid-manual">
     <div class="row">
       <div class="col col-12 text-center">
-        <h2>Learn from content experts, on demand</h2>
+        <h2>Learn on demand, from content experts</h2>
       </div>
     </div>
 
@@ -16,7 +16,7 @@
           <img src="${static.url('images/now-icon.png')}" alt="Learn now" />
           <p>
             <span>Learn now</span>
-            Engaging videos and hands-on labs to equip you with  with the skills and knowledge to be ultra productive
+            Engaging videos and hands-on labs to equip you with  with the skills and knowledge to be ultra-productive
           </p>
         </div>
       </div>
@@ -25,7 +25,7 @@
           <img src="${static.url('images/pace-icon.png')}" alt="Learn at your own pace" />
           <p>
             <span>Learn at your own pace</span>
-            All courses are self-paced allowing you to pause and resume as your schedule permits
+            All courses are self-paced allowing you to pause and resume and fit around your schedule
           </p>
         </div>
       </div>
@@ -34,7 +34,7 @@
           <img src="${static.url('images/anywhere-icon.png')}" alt="Learn anywhere" />
           <p>
             <span>Learn anywhere</span>
-            All you need is an internet connection, learn from any computer or mobile device
+            All you need is an internet connection to learn from any desktop, laptop or mobile device
           </p>
         </div>
       </div>
@@ -42,7 +42,7 @@
 
     <div class="row hidden more-about-btn">
       <div class="col col-12 text-center">
-        <a href="https://www.combined-knowledge.com/index.php/home/about-us/" target="_blank" class="btn-neutral">More about Combined Knowledge</a>
+        <a href="/courses" target="_blank" class="btn-neutral">View all courses</a>
       </div>
     </div>
   </div>
