--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -335,9 +335,12 @@ header.header-main {
         background-color: $brand-color;
         margin-bottom: 3px;
       }
-
-			
+				
 		}
+	  
+	  .list-inline {
+		  padding-bottom: 10px;
+	  }
     }
     ul{
       display: none;
@@ -461,7 +464,8 @@ header.header-main {
           box-shadow: 0px 2px 24px rgba(0,0,0,0.3);
           width: 50%;
           margin: auto;
-          margin-top: 0.5rem;
+          //margin-top: 0.5rem;
+			padding-bottom: 10px;
           border: 1px solid $light;
           li{
             border-bottom: 1px solid lighten($light, 10%);
