--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -681,11 +681,17 @@ header.header-main {
 			-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 			-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+			  transition: all 0.2s;
             .cover-image{
               height: 200px;
               &:before{
                 height: 200px;
               }
+				&:hover {
+			-webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+			-moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+			box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+				}
               .learn-more{
                 top: 62px;
               }
