--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -681,17 +681,18 @@ header.header-main {
 			-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 			-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
 			box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-			  transition: all 0.2s;
+			  transition: all 0.2s !important;
+			  &:hover {
+			-webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+			-moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+			box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+				}
             .cover-image{
               height: 200px;
               &:before{
                 height: 200px;
               }
-				&:hover {
-			-webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
-			-moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
-			box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
-				}
+				
               .learn-more{
                 top: 62px;
               }
