--- a/ck-theme/lms/templates/courses_list.html
+++ b/ck-theme/lms/templates/courses_list.html
@@ -33,4 +33,7 @@
 
     </div>
   </div>
+	 <div class="col col-12 text-center">
+        <a href="/courses" target="_blank" class="btn-neutral">View all courses</a>
+      </div>
 </section>
