--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -118,7 +118,7 @@ a{
 }
 h2, .header-courses{
   font-size: 1.5rem !important;
-  font-family: $brand-font !;
+  font-family: $brand-font !important;
   margin: 1.25rem 0 !important;
   text-transform: none !important;
 	font-weight: lighter !important;	
