--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -16,6 +16,10 @@ body{
 	
 }
 
+.course-info .hero-image {
+	background-position: left top !important;
+}
+
 
 	  .btn-neutral, .enter-course{
     border-color: $brand-color !important;
