--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -148,12 +148,12 @@ from openedx.core.djangolib.js_utils import js_escaped_string
       <div class="grid-container grid-manual">
         <div class="row">
           <div class="col col-12 sm-col-12 md-col-4 lg-col-4 xl-col-4 video">
-            <div class="video-data">
+           <!-- <div class="video-data">
               <a href="#video-modal" class="media" rel="leanModal">
                 <img src="${static.url(course_details.video_thumbnail_image_asset_path)}" alt="${course_details.video_thumbnail_image_name}">
                 <span class="play-btn"></span>
               </a>
-            </div>
+            </div>-->
           </div>
           <div class="col col-12 sm-col-12 md-col-8 lg-col-8 xl-col-8 description">
             <div class="data">
