--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -20,6 +20,16 @@ body{
 	background-position: left top !important;
 }
 
+.course-info .grid-manual .xl-col8 {
+	width: 50% !important;
+	
+}
+
+.course-info .data h1 {
+	top: 50% !important;
+	
+}
+
 
 	  .btn-neutral, .enter-course{
     border-color: $brand-color !important;
