--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -20,15 +20,11 @@ body{
 	background-position: left top !important;
 }
 
-.course-info .grid-manual .xl-col-8 {
-	width: 50% !important;
-	
+.course-info .course-run {
+	display: none !important;
 }
 
-.course-info .data h1 {
-	top: 50% !important;
-	
-}
+
 
 
 	  .btn-neutral, .enter-course{
