--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -182,16 +182,16 @@ from openedx.core.djangolib.js_utils import js_escaped_string
           <div class="col col-12 sm-col-12 md-col-6 sticky-course-title hidden">
             <span>${course_details.title or course.display_name}</span>
           </div>
-          <div class="col col-12 sm-col-12 md-col-3 course-run">
+          <!--<div class="col col-12 sm-col-12 md-col-3 course-run">
             Start Date:
             <span>${course_details.start_date.strftime('%b %-d, %Y')}</span>
-          </div>
-          <div class="col col-12 sm-col-12 md-col-3 course-run">
+          </div>-->
+          <!--<div class="col col-12 sm-col-12 md-col-3 course-run">
             Duration:
             <span>${course_details.duration}</span>
-          </div>
+          </div>-->
 
-          <div class="col col-12 sm-col-12 md-col-2">
+          <div class="col col-12 sm-col-12 md-col-3">
             Price:
             <span>${course_price}</span>
           </div>
