--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -191,7 +191,7 @@ from openedx.core.djangolib.js_utils import js_escaped_string
             <span>${course_details.duration}</span>
           </div>-->
 
-          <div class="col col-12 sm-col-12 md-col-1">
+          <div class="col col-4">
             Price:
             <span>${course_price}</span>
           </div>
@@ -286,7 +286,7 @@ from openedx.core.djangolib.js_utils import js_escaped_string
               % endif
             % endif
           % endif
-          <div class="col col-12 sm-col-12 md-col-2">
+          <div class="col col-4">
             <a href="${btn_href}" id="${btn_id}" class="btn-block btn-success btn-large btn-enroll ${btn_class}">
               ${_(btn_text)}
             </a>
