--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -24,6 +24,10 @@ body{
 	width: 100%;
 }
 
+.teacher img {
+	display: block;
+}
+
 
 
 
@@ -133,6 +137,10 @@ h2, .header-courses{
   margin: 1.25rem 0 !important;
   text-transform: none !important;
 	font-weight: lighter !important;	
+}
+
+h3 {
+	font-weight: bold !important;
 }
 h1, h2, h3, h4, h5, h6 p, li, body {
 	font-family: "proxima-nova", sans-serif !important;
@@ -524,8 +532,9 @@ header.header-main {
     }
 
 
-  .btn-neutral{
+  .btn-neutral, .btn-block, .btn-success, .btn-large, .btn-enroll{
     border-color: $brand-color !important;
+	border-radius: 0;
     color: $brand-color !important;
     &:hover{
       background-color: $brand-color !important;
@@ -536,7 +545,8 @@ header.header-main {
       color: $white !important; 
 	  }
   }
-  
+
+
 
 
 //Hero
@@ -650,6 +660,7 @@ header.header-main {
             line-height: normal;
             padding-left: 1rem;
             text-align: left;
+			vertical-align: middle;
               span{
                 display: block;
               }
