--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -536,6 +536,7 @@ header.header-main {
     border-color: $brand-color !important;
 	border-radius: 0;
     color: $brand-color !important;
+	
     &:hover{
       background-color: $brand-color !important;
       color: $white !important;
@@ -545,6 +546,10 @@ header.header-main {
       color: $white !important; 
 	  }
   }
+
+.btn-block, .btn-success, .btn-large, .btn-enroll{
+	background-color: $brand-color !important;
+}
 
 
 
