--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -549,6 +549,7 @@ header.header-main {
 
 .btn-block, .btn-success, .btn-large, .btn-enroll{
 	background-color: $brand-color !important;
+	color: $white !important;
 }
 
 
