--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -132,21 +132,27 @@ a{
 .inner-container{
   padding: 0 1.25rem;
 }
+
+
+
+h1, h2, h4, h5, h6 p, li, body {
+	font-family: "proxima-nova", sans-serif !important;
+	font-weight: lighter !important;
+}
+
 h2, .header-courses{
   font-size: 1.5rem !important;
   font-family: $brand-font !important;
   margin: 1.25rem 0 !important;
-  text-transform: none !important;
-	font-weight: lighter !important;	
+  text-transform: none !important;	
 }
 
 h3 {
 	font-weight: bold !important;
-}
-h1, h2, h3, h4, h5, h6 p, li, body {
 	font-family: "proxima-nova", sans-serif !important;
-	font-weight: lighter !important;
 }
+
+
 .col-centered{
   float: none !important;
   margin-left: auto !important;
