--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -671,7 +671,7 @@ header.header-main {
         .description{
           .data{
             padding: 7% 0 0 0;
-			  .data{
+			  .data, .description{
 				  vertical-align: middle;
 			  }
 			  h1{
