--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -670,8 +670,8 @@ header.header-main {
         height: auto;
         .description{
 			  vertical-align: middle;
-			  margin-top: 0;
-			  margin-bottom: 0;
+			 // margin-top: 0;
+			 // margin-bottom: 0;
           .data{
             padding: 7% 0 0 0;
 			vertical-align: middle;
