--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -669,7 +669,7 @@ header.header-main {
       .row{
         height: auto;
         .description{
-			  vertical-align: middle;
+			 // vertical-align: middle;
 			 // margin-top: 0;
 			 // margin-bottom: 0;
           .data{
