--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -669,9 +669,9 @@ header.header-main {
       .row{
         height: auto;
         .description{
-			 // vertical-align: middle;
-			 // margin-top: 0;
-			 // margin-bottom: 0;
+			  vertical-align: middle;
+			  margin-top: 0;
+			  margin-bottom: 0;
           .data{
             padding: 7% 0 0 0;
 			vertical-align: middle;
