--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -676,6 +676,8 @@ header.header-main {
           .data{
             padding: 7% 0 0 0;
 			vertical-align: middle;
+			  height: 100%;
+			  padding-top: 0;
 			  margin-top: 0;
 			  margin-bottom: 0;
 			  h1{
