--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -682,7 +682,7 @@ header.header-main {
 			  h1{
             font-size: 1.5rem;
             color: $black;
-            line-height: normal;
+            // line-height: normal;
             padding-left: 1rem;
             text-align: left;
 			vertical-align: middle;
