--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -683,10 +683,9 @@ header.header-main {
             height: 100%;
 			font-size: 1.5rem;
             color: $black;
-            // line-height: normal;
+            line-height: 100%;
             padding-left: 1rem;
             text-align: left;
-			vertical-align: middle;
 			display: inline-block !important;
               span{
                 display: block;
