--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -680,6 +680,7 @@ header.header-main {
 			  margin-top: 0;
 			  margin-bottom: 0;
 			  align-items: center;
+			}
 			  h1{
             font-size: 1.5rem;
             color: $black;
