--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -673,7 +673,8 @@ header.header-main {
 			  vertical-align: middle;
 			  margin-top: 0;
 			  margin-bottom: 0;
-			display: flex;
+			  display: flex;
+			  align-items: center;
           .data{
             padding: 0 !important;
 			vertical-align: middle;
