--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -676,7 +676,7 @@ header.header-main {
 			  display: flex;
 			  align-items: center;
           .data{
-            padding: 0 !important;
+            padding: 0;
 			vertical-align: middle;
 			  margin-top: 0;
 			  margin-bottom: 0;
@@ -1563,7 +1563,7 @@ header.header-main {
               padding: 11.5% 2% 0 0;
               h1{
                 color: $white;
-                font-size: 2.5rem;
+                font-size: 3rem;
               }
               p{
                 color: $white;
