--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -36,6 +36,7 @@ body{
     border-color: $brand-color !important;
     color: $brand-color !important;
 	background-color: transparent !important;
+		  border-radius: 0;
     &:hover{
       background-color: $brand-color !important;
       color: $white !important;
