--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -36,7 +36,7 @@ body{
     border-color: $brand-color !important;
     color: $brand-color !important;
 	background-color: transparent !important;
-		  border-radius: 0;
+		  border-radius: 0 !important;
     &:hover{
       background-color: $brand-color !important;
       color: $white !important;
@@ -49,6 +49,11 @@ body{
 	.info-date-block {
 		display: none !important;
 	}
+
+.btn-brand {
+	border-radius: 0 !important;
+	
+}
 
 
 //Helper Classes
