--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -295,7 +295,7 @@ from openedx.core.djangolib.js_utils import js_escaped_string
             <a href="${btn_href}" id="${btn_id}" class="btn-block btn-success btn-large btn-enroll ${btn_class}">
               ${_(btn_text)}
 				
-				<script>console.log('Mako output: ${user}');
+				<script>console.log("Mako output: test");
 				</script>
             </a>
           </div>
