--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -295,7 +295,11 @@ from openedx.core.djangolib.js_utils import js_escaped_string
             <a href="${btn_href}" id="${btn_id}" class="btn-block btn-success btn-large btn-enroll ${btn_class}">
               ${_(btn_text)}
 				
-				<script>console.log("Mako output: ${user}");
+				
+				<script>
+					console.log("Ecommerce checkout: ${ecommerce_checkout}");
+					console.log("Ecommerce checkout link: ${ecommerce_checkout_link}"); 
+				 // <script>console.log("Mako output: ${ecommerce_checkout}");
 				</script>
             </a>
           </div>
