--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -297,8 +297,8 @@ from openedx.core.djangolib.js_utils import js_escaped_string
 				
 				
 				<script>
-					console.log("Ecommerce checkout: ${ecommerce_checkout}");
-					console.log("Ecommerce checkout link: ${ecommerce_checkout_link}"); 
+					console.log("Is user authenticated?: ${user.is_authenticated()}");
+					console.log("User: ${user}"); 
 				 // <script>console.log("Mako output: ${ecommerce_checkout}");
 				</script>
             </a>
