--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -297,9 +297,8 @@ from openedx.core.djangolib.js_utils import js_escaped_string
 				
 				
 				<script>
-					console.log("Is user authenticated?: ${user.is_authenticated()}");
-					console.log("User: ${user}"); 
-				 // <script>console.log("Mako output: ${ecommerce_checkout}");
+					console.log("Add to cart post: ${add_to_cart_post}");
+					// <script>console.log("Mako output: ${ecommerce_checkout}");
 				</script>
             </a>
           </div>
