--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -297,7 +297,7 @@ from openedx.core.djangolib.js_utils import js_escaped_string
 				
 				
 				<script>
-					console.log("Add to cart post: ${add_to_cart_post}");
+					console.log("Add to cart post: ${add-to-cart}");
 					// <script>console.log("Mako output: ${ecommerce_checkout}");
 				</script>
             </a>
