--- a/ck-theme/lms/templates/courseware/course_about.html
+++ b/ck-theme/lms/templates/courseware/course_about.html
@@ -297,7 +297,7 @@ from openedx.core.djangolib.js_utils import js_escaped_string
 				
 				
 				<script>
-					console.log("Add to cart post: ${ecommerce_checkout}");
+					console.log("Is user active?: ${user.is_active}");
 					// <script>console.log("Mako output: ${ecommerce_checkout}");
 				</script>
             </a>
